# Power-House-Dashboard

./: app.py  pyproject.toml  requirements (3).txt  requirements .txt  requirements.txt  secrets_template.toml
