[project]
name = "power-house-dashboard"
version = "0.1.0"
requires-python = ">=3.12,<4"

dependencies = [
  "streamlit==1.49.1",
  "plotly==5.22.0",
  "kaleido==0.2.1",
  "pandas>=2.2",
  "numpy>=1.26",
  "openpyxl>=3.1",
  "Pillow>=10.0",
  "reportlab>=4.0",
  "PyPDF2>=3.0",
  "python-docx>=0.8.11",
  "python-pptx>=0.6.21",
]

